[gd_scene load_steps=4 format=3 uid="uid://dkpgq4pl12fey"]

[ext_resource type="Script" path="res://Prefabs/UI/game_over_hud.gd" id="1_ykcw1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_78a8x"]
bg_color = Color(0.2, 0.2, 0.2, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20
shadow_color = Color(0, 0, 0, 0.262745)
shadow_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_guxku"]
font_size = 24

[node name="GameOverHUD" type="Panel"]
custom_minimum_size = Vector2(500, 300)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -150.0
offset_right = 250.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_78a8x")
script = ExtResource("1_ykcw1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
theme_override_constants/separation = 50

[node name="GameOverLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "You didn't pass the exam"
label_settings = SubResource("LabelSettings_guxku")
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="TryAgainButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_mode = 0
disabled = true
text = "Try again"

[node name="ExitButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(150, 0)
layout_mode = 2
focus_mode = 0
disabled = true
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/TryAgainButton" to="." method="try_again_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ExitButton" to="." method="exit_button_pressed"]
